done google login

--- a/user/templates/user/index.html
+++ b/user/templates/user/index.html
@@ -16,7 +16,7 @@
         <a href="{% provider_login_url 'facebook' method='js_sdk' %}">Login using Facebook</a>
      </button>
      <button>
-        <a href="#">Login using Google</a>
+        <a href="{% provider_login_url 'google' %}">Login using Google</a>
      </button>
 
 </body>
